[gd_scene load_steps=3 format=3 uid="uid://28n6gh4fbhu3"]

[ext_resource type="Texture2D" uid="uid://dcok0aso1tqmx" path="res://Entities/Player/Inventory/emptytile.png" id="1_fo2b6"]
[ext_resource type="Script" path="res://Entities/Player/Inventory/InvSlot.gd" id="2_jlhfv"]

[node name="Tile" type="TextureRect"]
texture = ExtResource("1_fo2b6")
script = ExtResource("2_jlhfv")

[node name="InvSlot" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="Quantity" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -10.0
offset_top = 8.0
offset_right = 30.0
offset_bottom = 34.0
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_inv_slot_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_inv_slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="InvSlot" to="." method="_on_inv_slot_gui_input"]
[connection signal="mouse_entered" from="InvSlot" to="." method="_on_inv_slot_mouse_entered"]
[connection signal="mouse_exited" from="InvSlot" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="InvSlot" to="." method="_on_inv_slot_pressed"]
